src/test/ui/associated-item/associated-item-duplicate-bounds.stderr
error: generic parameters may not be used in const operations
  --> $DIR/associated-item-duplicate-bounds.rs:7:18
   |
LL |     links: [u32; A::LINKS], // Shouldn't suggest bounds already there.
   |                  ^^^^^^^^ cannot perform const operation using `A`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: aborting due to previous error

